@@ -65,7 +65,7 @@ void createBareMainWindow () {
 
 	Pwin = RootWindow(Xdpy, Xvi->screen);
 	Xwin = XCreateWindow(Xdpy, Pwin,
-		xPos, yPos, screenWidth, screenHeight, 0, Xvi->depth, InputOutput,
+		xPos, yPos, feWidth, feHeight, 0, Xvi->depth, InputOutput,
 		Xvi->visual, CWBorderPixel | CWColormap | CWEventMask, &Swa);
 
 	/* create window and icon name */
